# Technotrack

./: .gitmodules  README.md  quadratic-equation.c  run.sh  test
pointers/: README.md  input_3.c  input_getchar_1.c  input_scanf_1.c  input_scanf_2.c  input_scanf_3.c  run.sh  shakespeare.c  shakespeare.txt  strcpy.c  strlen.c  strncat.c  strstr.c  strtok.c
pointers/input/: README.md  getchar_1.c  getchar_3.c  run.sh  scanf_2.c  text.txt
pointers/input/tests/: getchar_1.c.txt  scanf_2.c.txt
pointers/str/: README.md  strcpy.c  strlen.c  strncat.c  strtok.c
pointers/str/tests/: strcpy.c.txt  strlen.c.txt  strncat.c.txt  strtok.c.txt
pointers/tests/: input_3.c_test.txt  input_getchar_1.c_test.txt  input_scanf_1.c_test.txt  input_scanf_3.c_test.txt  shakespeare.c_test.txt  strcpy.c_test.txt  strlen.c_test.txt  strncat.c_test.txt  strstr.c_test.txt  strtok.c_test.txt
quadratic_equation/: CMakeLists.txt  Doxyfile  README.md
quadratic_equation/doxygen/html/: dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  graph_legend.html  index.html  solve__equation_8hpp_source.html
quadratic_equation/doxygen/latex/: refman.tex
quadratic_equation/include/: solve_equation.hpp
quadratic_equation/res/: roots.txt  test.txt
quadratic_equation/source/: quadratic_equation.cpp  solve_equation.cpp
quadratic_equation/tests/: test.cpp
